--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.15.5",
     "express-validator": "^5.0.1",
     "jade": "~1.11.0",
+    "moment": "^2.20.1",
     "mongoose": "^5.0.6",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
