--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "moment": "^2.20.1",
     "mongoose": "^5.0.6",
     "morgan": "~1.9.0",
+    "net": "^1.0.2",
+    "repl": "^0.1.3",
     "serve-favicon": "~2.4.5"
   }
 }
