--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-session": "^1.15.6",
     "express-validator": "^5.0.1",
     "jade": "~1.11.0",
     "moment": "^2.20.1",
