--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
+    "d3": "^5.0.0",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
     "express-validator": "^5.0.1",
     "jade": "~1.11.0",
+    "jsdom": "^11.6.2",
     "moment": "^2.21.0",
     "mongoose": "^5.0.6",
     "morgan": "~1.9.0",
