--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "~1.9.0",
     "net": "^1.0.2",
     "repl": "^0.1.3",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "underscore": "^1.8.3"
   }
 }
