--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "net": "^1.0.2",
     "repl": "^0.1.3",
     "serve-favicon": "~2.4.5",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "hoek": "^5.0.3"
   }
 }
