--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "async": "^2.6.0",
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
+    "bson": "^1.0.5",
     "cookie-parser": "~1.4.3",
     "d3": "^5.0.0",
     "debug": "~2.6.9",
