--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "~1.18.2",
     "bson": "^1.0.5",
     "cookie-parser": "~1.4.3",
+    "cryptiles": "^4.1.2",
     "d3": "^5.0.0",
     "debug": "~2.6.9",
     "deep-extend": "^0.5.1",
