--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "net": "^1.0.2",
     "repl": "^0.1.3",
     "serve-favicon": "~2.4.5",
+    "sshpk": "^1.15.2",
     "underscore": "^1.8.3"
   }
 }
